quick fix to index

--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html>
-//start, name under
-<h1>Cody Antico</h1>
-//Bio
+<html lang="en">
+
+   <head>
+
+<meta charset="UTF-8">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+<meta name="author" content="Cody Antico">
+
+<title>My Bio</title>
+
+</head>
+
+<body>
+
+<h1 style="background-color:MediumSeaGreen;">Cody Antico</h1>
 <h2>My Bio.</h2>
-//image under
-<img src="" alt="I forgor" width="x" height="x">
+<img src="placeholder.png" alt="I forgor" width="336" height="280">
+<p></p>
+<p></p>
 
-
-
-
-
-
-
+</body>
 
 </html>
