--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
 <html>
-    Test Here
-</html>
+<head>
+<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+<title>Placeholder</title>
+</head>
+<body>  
+<h1>This is blank!</h1>
+<div><b>Go here! -> https://neit-cjantico-2024.netlify.app/assignment-2/</b></div>
+</body>
+    </html>
