--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>  
 <h1>This is blank!</h1>
-<div><b>Go here! -> https://neit-cjantico-2024.netlify.app/assignment-2/</b></div>
+<a href="https://neit-cjantico-2024.netlify.app/assignment-2/">Click Me!</a>
 </body>
     </html>
