--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -40,8 +40,7 @@
 <br> 
 <hr>
 
-<h1 style="background-color:rgb(71, 255, 153);">Cody Antico</h1>
-<h2>What am I playing?</h2>
+<h1 style="background-color:rgb(71, 255, 153);">What am I playing?</h1>
 
 <br> 
 <hr>
