--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>  
 <h1>This is blank!</h1>
-<a href="https://neit-cjantico-2024.netlify.app/assignment-2/">Click Me!</a>
+<a href="https://neit-cjantico-2024.netlify.app/assignment-2/">assignment 2!</a>
+<a href="https://neit-cjantico-2024.netlify.app/assignment-3/">assignment 3!</a>
+<a href="https://neit-cjantico-2024.netlify.app/assignment-4/">assignment 4!</a>
+<a href="https://neit-cjantico-2024.netlify.app/assignment-5/">assignment 5!</a>
 </body>
     </html>
