--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -1,53 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 
-   <head>
+<head>
 
-<meta charset="UTF-8">
+   <meta charset="UTF-8">
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<meta name="author" content="Cody Antico">
+   <meta name="author" content="Cody Antico">
 
-<title>My Bio</title>
+   <title>Reload Test</title>
+
 
 </head>
 
 <body>
-
-<h1 style="background-color:rgb(71, 255, 153);">Cody Antico</h1>
-<h2>My Bio.</h2>
-
-<br> 
-<hr>
-
-<img src="images/placeholder.png" alt="I forgor" width="336" height="280">
-
-<br> 
-<hr>
-
-<div>17 Year old currently studying at <b>NEIT.</b></div>
-
-<br> 
-<hr>
-
-<p>Names Cody, I'm a nerd. Well I mean geek? Ehh, Whatever. I'm huge into metal, especially older genres from the early 2000's to mid 2010's. <i>"Myspace Stuff"</i> I guess?</p>
-<p>I've been into gaming since I was young. Originally from Bellingham MA, Starting at <b>NEIT</b> has been a blast! I plan to start looking at esports oppertunities soon enough!</p>
-<p>I also randomly enough am a huge pro wrestling fan. Anything from the states to even overseas! I actually attempted to train professionly but thats.. <i>Curently on hold.</i></p>
-
-<br> 
-<hr>
-
-<h1 style="background-color:rgb(71, 255, 153);">What am I playing?</h1>
-
-<br> 
-<hr>
-
-<img src="images/godimanerd.png" alt="I forgor" width="1376" height="442">
-
-<p></p>
 
 </body>
 
