--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -13,6 +13,11 @@
 
 <title>My Bio</title>
 
+<style type="text/css">
+   body {font-family: Arial, Helvetica, sans-serif;}
+   h1 {font-family: 'Times New Roman', Times, serif;}
+</style>
+
 </head>
 
 <body>
