--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-   <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Cody Antico">
 
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-   <meta name="author" content="Cody Antico">
-
-   <title>Reload Test</title>
-
+    <title>Reload Test</title>
 
 </head>
-
 <body>
-
+    <p><input type="number" value="5" class="patrons"> / &#8734;</p>
+    <div class="fire"></div>
+    <script src="./js/script.js"></script>
+    
 </body>
-
 </html>
