--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -3,18 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <meta name="author" content="Cody Antico">
-
-    <title>Reload Test</title>
-
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <p><input type="number" value="5" class="patrons"> / &#8734;</p>
     <div class="fire"></div>
     <script src="./js/script.js"></script>
-    
+    <!-- "https://img.icons8.com/windows/64/000000/centre-of-gravity.png" -->
 </body>
 </html>
