--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -10,8 +10,13 @@
     
         <meta name="author" content="Cody Antico">
 
-      <link rel="stylesheet" href="./css/style.css">
-    <title>Reload Test</title>
+        <link rel="stylesheet" href="./css/style.css">
+        
+        <title>Reload Test</title>
+
+        <style type="text/css"> 
+        body {background-color: blanchedalmond;}
+        </style>
 
 </head>
 <body>
