--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -14,6 +14,9 @@
         
         <title>Reload Test</title>
 
+        <style type="text/css">
+            body {font-size: 60pt;}
+        </style>
 
 </head>
 <body>
