final fix swear to god

--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -15,7 +15,7 @@
         <title>Reload Test</title>
 
         <style type="text/css">
-            body {font-size: 60pt;}
+            body {}
         </style>
 
 </head>
