--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -14,8 +14,9 @@
 <title>My Bio</title>
 
 <style type="text/css">
-   body {font-family: Arial, Helvetica, sans-serif;}
-   h1 {font-family: 'Times New Roman', Times, serif;}
+   body {font-family: Arial, Helvetica, sans-serif; background-color: rgb(172, 172, 172);}
+   h1 {font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
+   h2 {font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
 </style>
 
 </head>
