--- a/week-2/reload/index.html
+++ b/week-2/reload/index.html
@@ -24,5 +24,7 @@
     <div class="fire"></div>
     <script src="./js/script.js"></script>
     
+    <img src="aim.png" alt="You're not mean't to see this!" class="center">
+    
 </body>
 </html>
