--- a/week-1/assignment/index.html
+++ b/week-1/assignment/index.html
@@ -19,6 +19,9 @@
    h2 {font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
 </style>
 
+<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
+
 </head>
 
 <body>
