--- a/week-2/reload/index.html
+++ b/week-2/reload/index.html
@@ -12,11 +12,13 @@
 
         <link rel="stylesheet" href="./css/style.css">
         
-        <title>Reload Test</title>
+        <title>Week 2 Gun Program</title>
 
         <style type="text/css">
             body {}
         </style>
+
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
 </head>
 <body>
