--- a/week-2/reload/index.html
+++ b/week-2/reload/index.html
@@ -26,7 +26,7 @@
     <div class="fire"></div>
     <script src="./js/script.js"></script>
     
-    <img src="aim.png" alt="You're not mean't to see this!" class="center">
+    <img src="images/aim.png" alt="You're not mean't to see this!" style="display: block; margin: auto;">
     
 </body>
 </html>
