--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>This is blank!</h1>
 <a href="https://neit-cjantico-2024.netlify.app/week-1/assignment">About Me!</a>
 <a href="https://neit-cjantico-2024.netlify.app/week-2/reload">Reload Test!</a>
-<a href="https://neit-cjantico-2024.netlify.app/week-/reload-actual">Actual Reload Assignment!</a>
+<a href="https://neit-cjantico-2024.netlify.app/week-2/reload-actual">Actual Reload Assignment!</a>
 <a href="https://neit-cjantico-2024.netlify.app/assignment-5/">assignment 5!</a>
 </body>
     </html>
