--- a/week-2/reload/index.html
+++ b/week-2/reload/index.html
@@ -2,18 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+      <title>Week 2 Gun Program</title>
+      <!--PUT YOUR NAME IN THE META TAG FOR AUTHOR-->
         <meta name="author" content="Cody Antico">
-
+        <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
+        <meta name="description" content="Small programming assignment using events, variables, functions and conditional logic">
         <link rel="stylesheet" href="./css/style.css">
-        
-        <title>Week 2 Gun Program</title>
-
         <style type="text/css">
             body {}
         </style>
