--- a/week-3/d1_assignment/index.html
+++ b/week-3/d1_assignment/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <canvas name="myCanvas" width="800" height="800">
+    <canvas id="myCanvas" width="800" height="800">
     </canvas>
     <script src="script.js"></script>
 </body>
