--- a/week-2/gamegroup/index.html
+++ b/week-2/gamegroup/index.html
@@ -11,15 +11,15 @@
     <style>
         /* Prevent text selection */
         body {
-            user-select: none; /* Prevent text selection in modern browsers */
-            -webkit-user-select: none; /* Prevent text selection in Safari */
-            -moz-user-select: none; /* Prevent text selection in Firefox */
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
         }
 
         /* Prevent scrolling */
         html, body {
-            overflow: hidden; /* Prevent scrolling */
-            height: 100%; /* Ensure body takes full height */
+            overflow: hidden;
+            height: 100%;
         }
 
         /* Universal styles */
@@ -135,7 +135,7 @@
 
     <script>
         let clipSize = 6;
-        let totalAmmo = 18;
+        let totalAmmo = 20; // Updated ammo reserve
         let currentClip = clipSize;
         let remainingAmmo = totalAmmo - clipSize;
         let score = 0;
@@ -195,12 +195,12 @@
             const target = document.createElement('img');
             target.src = 'images/aim.png'; // Regular target image
             target.style.position = 'absolute';
-            target.style.width = '200px'; // Increased size
-            target.style.height = '200px'; // Increased size
+            target.style.width = '300px'; // Increased size
+            target.style.height = '300px'; // Increased size
             target.style.zIndex = '1';
 
-            const randomX = Math.random() * (window.innerWidth - 200);
-            const randomY = Math.random() * (window.innerHeight - 200);
+            const randomX = Math.random() * (window.innerWidth - 300);
+            const randomY = Math.random() * (window.innerHeight - 300);
 
             target.style.left = `${randomX}px`;
             target.style.top = `${randomY}px`;
@@ -212,8 +212,11 @@
                     updateScoreDisplay();
                 }
                 document.body.removeChild(target);
-                if (Math.random() < 0.15) { // 15% chance to spawn a bonus target
+                if (Math.random() < 0.15) { // 15% chance to spawn a bonus target (aim2)
                     createBonusTarget(randomX, randomY);
+                }
+                if (Math.random() < 0.05) { // 5% chance to spawn aim3
+                    createSpecialTarget(randomX, randomY);
                 }
             };
 
@@ -228,15 +231,15 @@
             const bonusTarget = document.createElement('img');
             bonusTarget.src = 'images/aim2.png'; // Bonus target image
             bonusTarget.style.position = 'absolute';
-            bonusTarget.style.width = '200px'; // Increased size
-            bonusTarget.style.height = '200px'; // Increased size
+            bonusTarget.style.width = '300px'; // Increased size
+            bonusTarget.style.height = '300px'; // Increased size
             bonusTarget.style.zIndex = '1';
             bonusTarget.style.left = `${x}px`;
             bonusTarget.style.top = `${y}px`;
             document.body.appendChild(bonusTarget);
 
             bonusTarget.onclick = () => {
-                if (currentClip > 0) { // Only score if there is ammo
+                if (currentClip > 0) {
                     score += 100;
                     remainingAmmo += 6; // Bonus ammo
                     updateAmmoDisplay();
@@ -248,6 +251,34 @@
             setTimeout(() => {
                 if (document.body.contains(bonusTarget)) {
                     document.body.removeChild(bonusTarget);
+                }
+            }, 2000);
+        }
+
+        function createSpecialTarget(x, y) {
+            const specialTarget = document.createElement('img');
+            specialTarget.src = 'images/aim3.png'; // New special target image
+            specialTarget.style.position = 'absolute';
+            specialTarget.style.width = '300px'; // Increased size
+            specialTarget.style.height = '300px'; // Increased size
+            specialTarget.style.zIndex = '1';
+            specialTarget.style.left = `${x}px`;
+            specialTarget.style.top = `${y}px`;
+            document.body.appendChild(specialTarget);
+
+            specialTarget.onclick = () => {
+                if (currentClip > 0) {
+                    score += 150;
+                    gameTime += 10; // Increase time by 10 seconds
+                    updateScoreDisplay();
+                    updateTimerDisplay();
+                }
+                document.body.removeChild(specialTarget);
+            };
+
+            setTimeout(() => {
+                if (document.body.contains(specialTarget)) {
+                    document.body.removeChild(specialTarget);
                 }
             }, 2000);
         }
