--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <a href="https://neit-cjantico-2024.netlify.app/week-1/assignment">About Me!</a>
 <a href="https://neit-cjantico-2024.netlify.app/week-2/reload">Reload Test!</a>
 <a href="https://neit-cjantico-2024.netlify.app/week-3/d1_assignment">Shapes Exercise!</a>
-<a href="https://neit-cjantico-2024.netlify.app/assignment-5/">assignment 5!</a>
+<a href="https://neit-cjantico-2024.netlify.app/week-4/w4_pickup">Week Four Pickups!</a>
 <a href="https://neit-cjantico-2024.netlify.app/week-2/gamegroup/">Group Game</a>
 </body>
     </html>
