--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <a href="https://neit-cjantico-2024.netlify.app/week-2/reload">Reload Test!</a>
 <a href="https://neit-cjantico-2024.netlify.app/week-3/d1_assignment">Shapes Exercise!</a>
 <a href="https://neit-cjantico-2024.netlify.app/week-4/w4_pickup">Week Four Pickups!</a>
-<a href="https://neit-cjantico-2024.netlify.app/week-2/gamegroup/">Group Game</a>
+<a href="https://neit-cjantico-2024.netlify.app/shootyshootymcbangbang/">Final</a>
 </body>
     </html>
