--- a/shootyshootymcbangbang/index.html
+++ b/shootyshootymcbangbang/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="main-menu">
         <img src="images/logo.png" alt="Game Logo" id="logo">
-        <img src="images/play.png" alt="Play Button" id="play-button">
+        <button id="play-button">Play</button>
     </div>
 
     <canvas id="game-canvas"></canvas>
@@ -17,7 +17,7 @@
     <div id="game-over">
         <h1>Game Over</h1>
         <p id="score-display">Score: 0</p>
-        <img src="images/retry.png" alt="Retry Button" id="retry-button">
+        <button id="retry-button">Retry</button>
     </div>
 
     <script src="game.js"></script>
