--- a/shootyshootymcbangbang/index.html
+++ b/shootyshootymcbangbang/index.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Main Menu -->
     <div id="main-menu">
         <img src="images/logo.png" alt="Game Logo" id="logo">
-        <button id="play-button">Play</button>
+        <img src="images/play.png" alt="Play Button" id="play-button">
     </div>
 
+    <!-- Game Canvas -->
     <canvas id="game-canvas"></canvas>
 
+    <!-- Game Over Screen -->
     <div id="game-over">
         <h1>Game Over</h1>
         <p id="score-display">Score: 0</p>
-        <button id="retry-button">Retry</button>
+        <img src="images/retry.png" alt="Retry Button" id="retry-button">
     </div>
 
     <script src="game.js"></script>
